.k8s/flask-deployment-template.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-api-deployment
  namespace: <EKS_NAMESPACE> # kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fast-api-deployment
  template:
    metadata:
      labels:
        app: fast-api-deployment
    spec:
      containers:
      - name: fast-api-deployment
        image: <PUBLIC_ECR_AWS>
        ports:
        - containerPort: 80
        

---
apiVersion: v1
kind: Service
metadata:
  name: fast-api-service
  namespace: <EKS_NAMESPACE>
spec:
  type: NodePort
  selector:
    app: fast-api-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
