.k8s/ngix-ingress-template.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: frontend-ingress
 namespace: <EKS_NAMESPACE>
 annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /
  # nginx.ingress.kubernetes.io/ssl-redirect: "true"
  
spec:
 ingressClassName: nginx
 rules:
  - host: $LOAD_BALANCER_ADDRESS # alb.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reactui-service
            port:
              number: 80
